k8s/workloads/aurora/platform/gitops/aurora-system/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurora-control-plane
  namespace: aurora-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aurora
  template:
    metadata:
      labels:
        app: aurora
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: aurora-sa

      containers:
      - name: aurora
        image: aayud/aurora-platform:v0.6.1
        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        volumeMounts:
        - name: model-storage
          mountPath: /shared-models

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10

      volumes:
      - name: model-storage
        persistentVolumeClaim:
          claimName: aurora-model-pvc
