k8s/workloads/aurora/platform/gitops/aurora-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aurora
  namespace: aurora-system
spec:
  selector:
    app: aurora
  ports:
  - port: 80
    targetPort: 8000
