k8s/workloads/aurora/platform/gitops/aurora-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurora-ingress
  namespace: aurora-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aurora.aayushmandev.space
    secretName: aurora-tls
  rules:
  - host: aurora.aayushmandev.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aurora
            port:
              number: 80
